# cmake-scripts

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CPM.cmake  LICENSE  README.md  SECURITY.md  composer.json  daux_search_index.js  dependencies.cmake  dev-dependencies.cmake  index.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: defect-report.md
.github/workflows/: deploy-docs.yaml  tests.yaml
archive/: index.html
archive/v_next/: index.html
cmake/: CPM.cmake  rsp-cmake-scripts-config.cmake.in  setup-cpm.cmake
cmake/rsp/: cache.cmake  compiler.cmake  debug.cmake  git.cmake  helpers.cmake  logging.cmake  output.cmake  testing.cmake  version.cmake
cmake/rsp/compilers/: gcc.cmake
cmake/rsp/helpers/: types.cmake
cmake/rsp/logging/: utils.cmake
cmake/rsp/output/: ansi.cmake  utils.cmake
cmake/rsp/testing/: asserts.cmake  executor.cmake  test_executor.cmake
cmake/rsp/version/: semver.cmake
current/: code_of_conduct.html  contribution_guide.html  index.html  release_notes.html  security_policy.html  upgrade_guide.html
current/modules/: index.html
current/modules/cache/: forget.html  get.html  has.html  index.html  remember.html  set.html
current/modules/compiler/: gcc.html  index.html
current/modules/debug/: build_info.html  dump.html  index.html
current/modules/git/: find_version_tag.html  index.html
current/modules/helpers/: index.html  types.html
current/modules/logging/: functions.html  index.html  levels.html
current/modules/output/: ansi.html  helpers.html  index.html
current/modules/testing/: index.html
current/modules/testing/cmake/: asserts.html  executor.html  index.html  run_tests.html  test.html  test_case.html  test_suite.html
current/modules/version/: index.html  version_file.html
current/modules/version/semver/: index.html  parse.html
docs/: _index.md  config.json  style.css
docs/+current/: 01_release-notes.md  02_upgrade-guide.md  03_contribution-guide.md  04_security-policy.md  05_code-of-conduct.md  index.md
docs/+current/modules/: index.md
docs/+current/modules/cache/: 01_set.md  02_get.md  03_has.md  04_remember.md  05_forget.md  index.md
docs/+current/modules/compiler/: gcc.md  index.md
docs/+current/modules/debug/: build_info.md  dump.md  index.md
docs/+current/modules/git/: find-version-tag.md  index.md
docs/+current/modules/helpers/: index.md  types.md
docs/+current/modules/logging/: 01_levels.md  02_functions.md  index.md
docs/+current/modules/output/: ansi.md  helpers.md  index.md
docs/+current/modules/testing/: index.md
docs/+current/modules/testing/cmake/: -asserts.md  01_test_suite.md  02_test_case.md  03_test.md  04_run_tests.md  05_executor.md  index.md
docs/+current/modules/testing/cmake/-asserts/: index.md
docs/+current/modules/version/: index.md  version-file.md
docs/+current/modules/version/semver/: index.md  parse.md
docs/-archive/: index.md
docs/-archive/v0x/: index.md
docs/-archive/vXx/: 99_ignore.md  99_next_version.md
docs/-archive/v_next/: 99_ignore.md
resources/daux/theme/favicon/: README.md
resources/daux/themes/rsp/: config.json
resources/daux/themes/rsp/css/: style.css
resources/daux/themes/rsp/favicon/: about.txt
tests/: CMakeLists.txt
tests/unit/cache/: cache_test.cmake
tests/unit/compilerse/: gcc_info_test.cmake  gcc_version_test.cmake
tests/unit/debug/: build_info_test.cmake  var_dump_test.cmake
tests/unit/git/: find_version_tag_test.cmake
tests/unit/helpers/: requires_arguments_test.cmake  safeguard_properties_test.cmake  types_test.cmake
tests/unit/logging/: log_test.cmake
tests/unit/output/: ansi_test.cmake  output_test.cmake
tests/unit/testing/: asserts_test.cmake  before_after_callbacks_test.cmake  data_provider_test.cmake  failure_expectations_test.cmake  skip_test.cmake
tests/unit/version/: dummy_a.cmake  dummy_b.cmake  semver_parser_test.cmake  version_file_test.cmake
themes/rsp/css/: style.css
